syntax = "proto3";

option java_multiple_files = true;
option java_package = "sopes1.fase2.proyecto";
option java_outer_classname = "proyecto";
option objc_class_prefix = "spf2";

package proyecto;

service API {
  rpc startGame (GameRequest) returns (GameResponse) {}
}

// The request message containing the user's name.
message GameRequest {
    int32 game_id = 1;
    int32 players = 2;
}

message GameResponse {
  string status = 1;
}