syntax = "proto3";

option java_multiple_files = true;
option java_package = "sopes1.fase2.proyecto";
option java_outer_classname = "proyecto";
option objc_class_prefix = "spf2";

package proyecto;

service localAPI {
    rpc startGame (GameRequest) returns (GameResult) {}
}

message GameRequest {
    int32 gameid = 1;
    int32 players = 2;
}

message GameResult {
    int32 status = 1;
}